tests/errors/validation/type-inside-function.fn
---
Description: Type declared inside a function body
Expected: compile error
---

type NestTest
{
    fn Outer
    {
        type Illegal
        {
            value: i32
        }
    }
}

type Program
{
    fn Main -> i32
    {
        return 0
    }
}
